logo alignment fixes

--- a/components/Footer.module.scss
+++ b/components/Footer.module.scss
@@ -139,7 +139,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .navLinkText {
