--- a/components/InfoSection.module.scss
+++ b/components/InfoSection.module.scss
@@ -26,7 +26,7 @@
 
 .content {
     color: var(--color-white);
-    font-size: 18px;
+    font-size: 20px;
     letter-spacing: 0.8px;
     line-height: 24px;
     font-family: 'EB-Garamond-Regular';
