--- a/components/Navbar.module.scss
+++ b/components/Navbar.module.scss
@@ -35,7 +35,7 @@
 
     @media (max-width: 1050px) {
         flex-direction: row;
-        align-items: flex-end;
+        align-items: center;
     }
 }
 
